Adds animation to text in main banner

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -235,37 +236,37 @@
           <!-- Copy this slide 4 times  -->
           <div class="main-banner__slide carousel-item active ml-4">
             <div class="main-banner__text text-center d-inline-block">
-              <div class="main-banner__category banner__category">popular products</div>
-              <div class="main-banner__title banner__title">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+              <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
+              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
-              <div class="main-banner__category banner__category">popular products</div>
-              <div class="main-banner__title banner__title">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+              <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
+              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
-              <div class="main-banner__category banner__category">popular products</div>
-              <div class="main-banner__title banner__title">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+              <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
+              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
-              <div class="main-banner__category banner__category">popular products</div>
-              <div class="main-banner__title banner__title">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+              <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
+              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
