Improves animation duration and delay of text in main  banners. Also adds different animations to different slides

--- a/index.html
+++ b/index.html
@@ -236,36 +236,36 @@
           <div class="main-banner__slide carousel-item active ml-4">
             <div class="main-banner__text text-center d-inline-block">
               <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
-              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
+              <div class="main-banner__title banner__title animated fadeInLeftBig">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated fadeInRightBig">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig">Add to bag</a>
+            </div>
+            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+          </div>
+          <div class="main-banner__slide carousel-item ml-4">
+            <div class="main-banner__text text-center d-inline-block">
+              <div class="main-banner__category banner__category animated fadeIn">popular products</div>
+              <div class="main-banner__title banner__title animated flipInX">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated slideInUp">Add to bag</a>
+            </div>
+            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+          </div>
+          <div class="main-banner__slide carousel-item ml-4">
+            <div class="main-banner__text text-center d-inline-block">
+              <div class="main-banner__category banner__category animated slideInDown">popular products</div>
+              <div class="main-banner__title banner__title animated zoomInUp">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated slideInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated slideInUP">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
               <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
-              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
-            </div>
-            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
-          </div>
-          <div class="main-banner__slide carousel-item ml-4">
-            <div class="main-banner__text text-center d-inline-block">
-              <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
-              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
-            </div>
-            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
-          </div>
-          <div class="main-banner__slide carousel-item ml-4">
-            <div class="main-banner__text text-center d-inline-block">
-              <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
-              <div class="main-banner__title banner__title animated fadeInLeftBig delay-200ms">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated fadeInRightBig delay-300ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig delay-400ms">Add to bag</a>
+              <div class="main-banner__title banner__title animated zoomIn">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
