Improves main  banner slider on 1200+px

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   </header>
   <div class="top-banners container-fluid p-0">
     <div class="row no-gutters">
-      <div class="top-banners__main-banner-slider col-xl-12 carousel slide" id="main-banner-slider" data-ride="carousel">
+      <div class="top-banners__main-banner-slider col-12 col-xl-7 carousel slide" id="main-banner-slider" data-rde="carousel">
         <!-- Slider dots  -->
         <ol class="carousel-indicators main-banner__dot-list">
           <li class="main-banner__dot active" data-target="#main-banner-slider" data-slide-to="0"></li>
@@ -240,7 +240,7 @@
               <div class="main-banner__description text-center mb-5 animated fadeInRightBig">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig">Add to bag</a>
             </div>
-            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+            <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
@@ -249,7 +249,7 @@
               <div class="main-banner__description text-center mb-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated slideInUp">Add to bag</a>
             </div>
-            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+            <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
@@ -258,7 +258,7 @@
               <div class="main-banner__description text-center mb-5 animated slideInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated slideInUP">Add to bag</a>
             </div>
-            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+            <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <div class="main-banner__slide carousel-item ml-4">
             <div class="main-banner__text text-center d-inline-block">
@@ -267,7 +267,7 @@
               <div class="main-banner__description text-center mb-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig">Add to bag</a>
             </div>
-            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+            <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
           <!-- End slide -->
         </div>
@@ -281,7 +281,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <div class="top-banners__second-banners d-flex">
+      <div class="top-banners__second-banners col-12 col-xl-5 d-flex flex-xl-column">
         <div class="top-banners__second-banner row flex-grow-1 align-items-center">
           <div class="second-banner__img col-4 col-lg-5">
             <img class="d-block ml-auto" src="img/main_banner_image-2.png" alt="Product in second banner">
