--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   </header>
   <div class="top-banners container-fluid p-0">
     <div class="row no-gutters">
-      <div class="top-banners__main-banner-slider col-12 col-xl-7 carousel slide" id="main-banner-slider" data-rde="carousel">
+      <div class="top-banners__main-banner-slider col-12 col-xl-7 carousel slide" id="main-banner-slider" data-ide="carousel">
         <!-- Slider dots  -->
         <ol class="carousel-indicators main-banner__dot-list">
           <li class="main-banner__dot active" data-target="#main-banner-slider" data-slide-to="0"></li>
@@ -233,38 +233,38 @@
         </ol>
         <div class="carousel-inner">
           <!-- Copy this slide 4 times  -->
-          <div class="main-banner__slide carousel-item active ml-4">
-            <div class="main-banner__text text-center d-inline-block">
+          <div class="main-banner__slide carousel-item active">
+            <div class="main-banner__text text-center d-inline-flex">
               <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
               <div class="main-banner__title banner__title animated fadeInLeftBig">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated fadeInRightBig">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <div class="main-banner__description text-center mb-4 mb-md-5 animated fadeInRightBig">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
-          <div class="main-banner__slide carousel-item ml-4">
-            <div class="main-banner__text text-center d-inline-block">
+          <div class="main-banner__slide carousel-item">
+            <div class="main-banner__text text-center d-inline-flex">
               <div class="main-banner__category banner__category animated fadeIn">popular products</div>
               <div class="main-banner__title banner__title animated flipInX">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <div class="main-banner__description text-center mb-4 mb-md-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated slideInUp">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
-          <div class="main-banner__slide carousel-item ml-4">
-            <div class="main-banner__text text-center d-inline-block">
+          <div class="main-banner__slide carousel-item">
+            <div class="main-banner__text text-center d-inline-flex">
               <div class="main-banner__category banner__category animated slideInDown">popular products</div>
               <div class="main-banner__title banner__title animated zoomInUp">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated slideInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <div class="main-banner__description text-center mb-4 mb-md-5 animated slideInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated slideInUP">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
-          <div class="main-banner__slide carousel-item ml-4">
-            <div class="main-banner__text text-center d-inline-block">
+          <div class="main-banner__slide carousel-item">
+            <div class="main-banner__text text-center d-inline-flex">
               <div class="main-banner__category banner__category animated fadeInDownBig">popular products</div>
               <div class="main-banner__title banner__title animated zoomIn">TABLET pro</div>
-              <div class="main-banner__description text-center mb-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <div class="main-banner__description text-center mb-4 mb-md-5 animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
               <a href="#" class="btn main-banner__btn custom-btn animated fadeInUpBig">Add to bag</a>
             </div>
             <img class="main-banner__image d-inline-block mr-3 animated fadeIn" src="img/main_banner_image-1.png" alt="Product of main banner">
