Improves hovers in bottom banners

--- a/index.html
+++ b/index.html
@@ -1410,8 +1410,8 @@
     <div class="bottom-banners row no-gutters">
       <div class="second-bottom-banners col-12 col-lg-4">
         <div href="#" class="second-b-banners__item" tabindex="0">
-          <div class="second-b-banners__category banner__category mb-1">category</div>
-          <div class="second-b-banners__title">new iphone 6</div>
+          <a href="#" class="second-b-banners__category banner__category mb-1">category</a>
+          <a href="#" class="second-b-banners__title">new iphone 6</a>
           <div class="item__price-list">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
@@ -1419,8 +1419,8 @@
           <a href="#" class="second-b-banners__btn">Buy now</a>
         </div>
         <div href="#" class="second-b-banners__item" tabindex="0">
-          <div class="second-b-banners__category banner__category mb-1">category</div>
-          <div class="second-b-banners__title">new iphone 6</div>
+          <a href="#" class="second-b-banners__category banner__category mb-1">category</a>
+          <a href="#" class="second-b-banners__title">new iphone 6</a>
           <div class="item__price-list">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
@@ -1433,8 +1433,8 @@
           <img src="img/main_bottom_baner_image.png" alt="Bottom banner image.">
         </div>
         <div class="main-b-banner__text col-sm-6">
-          <div class="second-b-banners__category banner__category">computers</div>
-          <div class="main-b-banner__title mb-3">Apple iMac 21.5</div>
+          <a href="#" class="second-b-banners__category banner__category">computers</a>
+          <a href="#" class="main-b-banner__title mb-3">Apple iMac 21.5</a>
           <div class="promo__description">Lorem ipsum dolor sit amet, consectetur adipiscing dolore magna aliqua</div>
           <div class="promo__sale">up to <span>25%</span></div>
           <a href="#" class="main-b-banner__btn">Buy now</a>
