Improves colors and margins in footer

--- a/index.html
+++ b/index.html
@@ -1617,8 +1617,8 @@
   <footer class="py-5">
     <div class="container">
       <img src="img/footer_logo.jpg" alt="Footer logo" class="footer__logo">
-      <p class="footer__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ad odio sit, doloribus perspiciatis nam corrupti architecto at ipsum recusandae quis provident nesciunt sapiente vitae porro sunt ab natus laudantium!</p>
-      <hr class="footer__separator">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ad odio sit, doloribus perspiciatis nam corrupti architecto at ipsum recusandae quis provident nesciunt sapiente vitae porro sunt ab natus laudantium!</p>
+      <hr>
       <div class="footer__bottom row">
         <div class="footer__links col-4 col-6 col-sm-4 col-xl-3">
           <h4 class="footer-links__title icon-font-caret-down-solid mb-3" data-toggle="collapse" data-target="#footer-hide-list-1" aria-expanded="false" aria-controls="#footer-hide-list-1">Information</h4>
